generated/checker-for-evaluation/generated/test-Uninit-Data-eaa03486d932572dfd1c5f64f9dfebe572ad88c0/build_logs/1/build_error_log4.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In constructor ‘{anonymous}::SAGenTestChecker::SAGenTestChecker()’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:48:93: error: no matching function for call to ‘clang::ento::BugType::BugType(const char [27], const char [23])’
   48 |   SAGenTestChecker() : BT(new BugType("Uninitialized return value", "Uninitialized Variable")) {}
      |                                                                                             ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:42:3: note: candidate: ‘clang::ento::BugType::BugType(const clang::ento::CheckerBase*, llvm::StringRef, llvm::StringRef, bool)’
   42 |   BugType(const CheckerBase *Checker, StringRef Desc,
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:42:30: note:   no known conversion for argument 1 from ‘const char [27]’ to ‘const clang::ento::CheckerBase*’
   42 |   BugType(const CheckerBase *Checker, StringRef Desc,
      |           ~~~~~~~~~~~~~~~~~~~^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:38:3: note: candidate: ‘clang::ento::BugType::BugType(clang::ento::CheckerNameRef, llvm::StringRef, llvm::StringRef, bool)’
   38 |   BugType(CheckerNameRef CheckerName, StringRef Desc,
      |   ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:38:26: note:   no known conversion for argument 1 from ‘const char [27]’ to ‘clang::ento::CheckerNameRef’
   38 |   BugType(CheckerNameRef CheckerName, StringRef Desc,
      |           ~~~~~~~~~~~~~~~^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:27:7: note: candidate: ‘clang::ento::BugType::BugType(const clang::ento::BugType&)’
   27 | class BugType {
      |       ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:27:7: note:   candidate expects 1 argument, 2 provided
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/Checker.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugType.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:23,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h: In instantiation of ‘CHECKER* clang::ento::CheckerManager::registerChecker(AT&& ...) [with CHECKER = {anonymous}::SAGenTestChecker; AT = {}]’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:108:36:   required from ‘static void clang::ento::CheckerRegistry::initializeManager(MGR&) [with MGR = clang::ento::CheckerManager; T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Frontend/CheckerRegistry.h:132:15:   required from ‘void clang::ento::CheckerRegistry::addChecker(llvm::StringRef, llvm::StringRef, llvm::StringRef, bool) [with T = {anonymous}::SAGenTestChecker]’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:140:40:   required from here
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/CheckerManager.h:210:21: error: cannot convert ‘clang::ento::CheckerNameRef’ to ‘const char*’ in assignment
  210 |     checker->Name = CurrentCheckerName;
      |                     ^~~~~~~~~~~~~~~~~~
      |                     |
      |                     clang::ento::CheckerNameRef
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:107:6: warning: ‘void {anonymous}::SAGenTestChecker::checkPreStmt(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’ defined but not used [-Wunused-function]
  107 | void SAGenTestChecker::checkPreStmt(const ReturnStmt *RS, CheckerContext &C) const {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:84:6: warning: ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’ defined but not used [-Wunused-function]
   84 | void SAGenTestChecker::checkBind(SVal Loc, SVal Val, const Stmt *StoreE, CheckerContext &C) const {
      |      ^~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:66:6: warning: ‘void {anonymous}::SAGenTestChecker::checkPostStmt(const clang::DeclStmt*, clang::ento::CheckerContext&) const’ defined but not used [-Wunused-function]
   66 | void SAGenTestChecker::checkPostStmt(const DeclStmt *DS, CheckerContext &C) const {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
